// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;

exports[`EligibilityIcon [common] example testing should match snapshot(s) for 1.default 9`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EligibilityIcon"
  color="primary"
  isClickable={false}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <g>
    <path
      className="lucid-EligibilityIcon-half-circle"
      d="M6 14.71A7.003 7.003 0 0 1 6 1.29v13.42z"
    />
    <path
      className="lucid-EligibilityIcon-half-circle lucid-EligibilityIcon-is-selected"
      d="M10 1.29a7.003 7.003 0 0 1 0 13.42V1.29z"
    />
  </g>
</Icon>
`;
